<resources>
    <string name="app_name">Djournal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_djournal">Welcome to Djournal</string>
    <string name="journal_image">journal_image</string>
    <string name="addbtn">Add new Journal</string>
    <string name="new_journal_title">new journal title</string>
    <string name="enter_journal_description">enter Journal description</string>
    <string name="enter_journal_color">enter journal color</string>
    <string name="journal_title">Journal Title</string>
    <string name="journal_description">Journal Description</string>
    <string name="journal_color">Journal Color</string>
    <string name="new_journal">New Journal</string>
    <string name="create_new_journal">Create New Journal</string>
    <string name="name">Name:</string>
    <string name="cancel">CANCEL</string>
    <string name="create">CREATE</string>
    <string name="enter_journal_name">enter journal name</string>
    <string name="description">Description:</string>
    <string name="color">Color:</string>
    <string name="notes">Notes</string>
    <string name="UserProfile">User Profile</string>
    <string name="log_all_journals">Log all journals</string>
    <string name="log_all_notes">Log All Notes</string>
    <string name="layout">layout</string>
    <string name="your_voice_recordings">Your Voice Recordings</string>
    <string name="play_button">play button</string>
    <string name="save_record">Save Record</string>

</resources>