<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="journalTrackerViewModel"
            type="fh.campus.djournal.viewmodels.JournalViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".fragments.CreateNewJournalFragment">

        <TextView
            android:id="@+id/newJournalTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/create_new_journal"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editTextNameLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="40dp"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/name" />

        <EditText
            android:id="@+id/editTextNewJournalName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:autofillHints="@string/enter_journal_name"
            android:ems="10"
            android:hint="@string/enter_journal_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/editTextDescriptionLable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/description" />

        <EditText
            android:id="@+id/editTextNewJournalDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:autofillHints="@string/enter_journal_description"
            android:ems="10"
            android:hint="@string/enter_journal_description"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/editTextColorLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:text="@string/color" />

        <EditText
            android:id="@+id/editTextNewJournalColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_medium"
            android:layout_marginRight="@dimen/margin_medium"
            android:autofillHints="@string/enter_journal_color"
            android:ems="10"
            android:hint="@string/enter_journal_color"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_large"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_weight="1"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/btnCreate"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginRight="@dimen/margin_medium"
                android:layout_weight="1"
                android:text="@string/create" />
        </LinearLayout>


    </LinearLayout>

</layout>