<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/editTextJournalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/new_journal_title"
        android:ems="10"
        android:hint="@string/new_journal_title"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dialogJournalDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextJournalDescription"
        app:layout_constraintTop_toBottomOf="@+id/dialogJournalTitle" />

    <EditText
        android:id="@+id/editTextJournalDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_journal_description"
        android:ems="10"
        android:hint="@string/enter_journal_description"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/dialogJournalColor"
        app:layout_constraintStart_toStartOf="@+id/dialogJournalColor"
        app:layout_constraintTop_toBottomOf="@+id/dialogJournalDescription" />

    <EditText
        android:id="@+id/editTextJournalColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_journal_color"
        android:ems="10"
        android:hint="@string/enter_journal_color"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogJournalColor" />

    <TextView
        android:id="@+id/dialogJournalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/journal_title"
        app:layout_constraintBottom_toTopOf="@+id/editTextJournalTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextJournalTitle"
        app:layout_constraintTop_toBottomOf="@+id/newJournalDialogTitle"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/dialogJournalDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/journal_description"
        app:layout_constraintBottom_toTopOf="@+id/editTextJournalDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextJournalDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextJournalTitle" />

    <TextView
        android:id="@+id/dialogJournalColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/journal_color"
        app:layout_constraintBottom_toTopOf="@+id/editTextJournalColor"
        app:layout_constraintStart_toStartOf="@+id/editTextJournalColor"
        app:layout_constraintTop_toBottomOf="@+id/editTextJournalDescription" />

    <TextView
        android:id="@+id/newJournalDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/new_journal"
        android:textAlignment="center"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>